src/.antlr/PLParser.java
// Generated from /home/levi/csci4020/Compilers-Final-Project/src/PL.g4 by ANTLR 4.13.1

import backend.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, TYPE_NUMBER=2, TYPE_STRING=3, TYPE_BOOLEAN=4, FOR_STATEMENT=5, 
		FUNC_STATEMENT=6, PRINT=7, IF_STATEMENT=8, ELSE_STATEMENT=9, RANGE=10, 
		CONCAT=11, NUMERIC=12, STRING=13, BOOLEAN=14, ID=15, ADD=16, SUB=17, MUL=18, 
		DIV=19, EQUAL=20, LT=21, GT=22, EQ=23, LTEQ=24, GTEQ=25, OPEN_BRACE=26, 
		CLOSE_BRACE=27, OPEN_BLOCK=28, CLOSE_BLOCK=29, COMMA=30, SEMICOLON=31, 
		COMMENT=32, WHITESPACE=33;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_block = 2, RULE_expression = 3, 
		RULE_assignment = 4, RULE_loop = 5, RULE_ifStatement = 6, RULE_funDef = 7, 
		RULE_printStatement = 8, RULE_params = 9, RULE_expressions = 10, RULE_type = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "block", "expression", "assignment", "loop", 
			"ifStatement", "funDef", "printStatement", "params", "expressions", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'in'", "'number'", "'string'", "'bool'", "'for'", "'function'", 
			"'print'", "'if'", "'else'", "'..'", "'++'", null, null, null, null, 
			"'+'", "'-'", "'*'", "'/'", "'='", "'<'", "'>'", "'=='", "'<='", "'>='", 
			"'('", "')'", "'{'", "'}'", "','", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "TYPE_NUMBER", "TYPE_STRING", "TYPE_BOOLEAN", "FOR_STATEMENT", 
			"FUNC_STATEMENT", "PRINT", "IF_STATEMENT", "ELSE_STATEMENT", "RANGE", 
			"CONCAT", "NUMERIC", "STRING", "BOOLEAN", "ID", "ADD", "SUB", "MUL", 
			"DIV", "EQUAL", "LT", "GT", "EQ", "LTEQ", "GTEQ", "OPEN_BRACE", "CLOSE_BRACE", 
			"OPEN_BLOCK", "CLOSE_BLOCK", "COMMA", "SEMICOLON", "COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }



	public PLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Expr expr;
		public StatementContext stmt;
		public TerminalNode EOF() { return getToken(PLParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 67170812L) != 0)) {
				{
				{
				setState(24);
				((ProgramContext)_localctx).stmt = statement();
				}
				}
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(30);
			match(EOF);

			        List<Expr> stmtList = new ArrayList<Expr>();
			        for (StatementContext stmtCtx : ((ProgramContext)_localctx).statement()) {
			            stmtList.add(stmtCtx.statementResult);
			        }
			        ((ProgramContext)_localctx).expr =  new Block(stmtList);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Expr statementResult;
		public AssignmentContext assignment;
		public ExpressionContext expression;
		public PrintStatementContext printStatement;
		public LoopContext loop;
		public FunDefContext funDef;
		public IfStatementContext ifStatement;
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(PLParser.SEMICOLON, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public FunDefContext funDef() {
			return getRuleContext(FunDefContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(54);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE_NUMBER:
			case TYPE_STRING:
			case TYPE_BOOLEAN:
				enterOuterAlt(_localctx, 1);
				{
				setState(33);
				((StatementContext)_localctx).assignment = assignment();
				setState(34);
				match(SEMICOLON);
				 ((StatementContext)_localctx).statementResult =  ((StatementContext)_localctx).assignment.var; 
				}
				break;
			case NUMERIC:
			case STRING:
			case BOOLEAN:
			case ID:
			case OPEN_BRACE:
				enterOuterAlt(_localctx, 2);
				{
				setState(37);
				((StatementContext)_localctx).expression = expression(0);
				setState(38);
				match(SEMICOLON);
				 ((StatementContext)_localctx).statementResult =  ((StatementContext)_localctx).expression.expressionValue; 
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 3);
				{
				setState(41);
				((StatementContext)_localctx).printStatement = printStatement();
				setState(42);
				match(SEMICOLON);
				 ((StatementContext)_localctx).statementResult =  ((StatementContext)_localctx).printStatement.printValue; 
				}
				break;
			case FOR_STATEMENT:
				enterOuterAlt(_localctx, 4);
				{
				setState(45);
				((StatementContext)_localctx).loop = loop();
				 ((StatementContext)_localctx).statementResult =  ((StatementContext)_localctx).loop.loopResult; 
				}
				break;
			case FUNC_STATEMENT:
				enterOuterAlt(_localctx, 5);
				{
				setState(48);
				((StatementContext)_localctx).funDef = funDef();
				 ((StatementContext)_localctx).statementResult =  ((StatementContext)_localctx).funDef.funcResult; 
				}
				break;
			case IF_STATEMENT:
				enterOuterAlt(_localctx, 6);
				{
				setState(51);
				((StatementContext)_localctx).ifStatement = ifStatement();
				 ((StatementContext)_localctx).statementResult =  ((StatementContext)_localctx).ifStatement.ifelseResult; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public Block blockValue;
		public StatementContext statement;
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 List<Expr> stmtList = new ArrayList<Expr>(); 
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 67170812L) != 0)) {
				{
				{
				setState(57);
				((BlockContext)_localctx).statement = statement();
				 stmtList.add(((BlockContext)_localctx).statement.statementResult); 
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 ((BlockContext)_localctx).blockValue =  new Block(stmtList); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public Expr expressionValue;
		public Type t;
		public ExpressionContext e1;
		public ExpressionContext expression;
		public Token ID;
		public ExpressionsContext expressions;
		public Token NUMERIC;
		public Token STRING;
		public Token BOOLEAN;
		public ExpressionContext e2;
		public TerminalNode OPEN_BRACE() { return getToken(PLParser.OPEN_BRACE, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode CLOSE_BRACE() { return getToken(PLParser.CLOSE_BRACE, 0); }
		public TerminalNode ID() { return getToken(PLParser.ID, 0); }
		public ExpressionsContext expressions() {
			return getRuleContext(ExpressionsContext.class,0);
		}
		public TerminalNode NUMERIC() { return getToken(PLParser.NUMERIC, 0); }
		public TerminalNode STRING() { return getToken(PLParser.STRING, 0); }
		public TerminalNode BOOLEAN() { return getToken(PLParser.BOOLEAN, 0); }
		public TerminalNode ADD() { return getToken(PLParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(PLParser.SUB, 0); }
		public TerminalNode MUL() { return getToken(PLParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(PLParser.DIV, 0); }
		public TerminalNode LT() { return getToken(PLParser.LT, 0); }
		public TerminalNode GT() { return getToken(PLParser.GT, 0); }
		public TerminalNode EQ() { return getToken(PLParser.EQ, 0); }
		public TerminalNode LTEQ() { return getToken(PLParser.LTEQ, 0); }
		public TerminalNode GTEQ() { return getToken(PLParser.GTEQ, 0); }
		public TerminalNode CONCAT() { return getToken(PLParser.CONCAT, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(68);
				match(OPEN_BRACE);
				setState(69);
				((ExpressionContext)_localctx).expression = expression(0);
				setState(70);
				match(CLOSE_BRACE);
				((ExpressionContext)_localctx).expressionValue =  new ParenthesizedExpression(((ExpressionContext)_localctx).expression.expressionValue); ((ExpressionContext)_localctx).t =  ((ExpressionContext)_localctx).expression.t;
				}
				break;
			case 2:
				{
				setState(73);
				((ExpressionContext)_localctx).ID = match(ID);
				setState(74);
				match(OPEN_BRACE);
				setState(75);
				((ExpressionContext)_localctx).expressions = expressions();
				setState(76);
				match(CLOSE_BRACE);
				 ((ExpressionContext)_localctx).expressionValue =  new Invoke((((ExpressionContext)_localctx).ID!=null?((ExpressionContext)_localctx).ID.getText():null), ((ExpressionContext)_localctx).expressions.expressionListValue); 
				}
				break;
			case 3:
				{
				setState(79);
				((ExpressionContext)_localctx).ID = match(ID);
				 
				        ((ExpressionContext)_localctx).expressionValue =  new Deref((((ExpressionContext)_localctx).ID!=null?((ExpressionContext)_localctx).ID.getText():null));
				    
				}
				break;
			case 4:
				{
				setState(81);
				((ExpressionContext)_localctx).NUMERIC = match(NUMERIC);
				 ((ExpressionContext)_localctx).expressionValue =  new IntLiteral((((ExpressionContext)_localctx).NUMERIC!=null?((ExpressionContext)_localctx).NUMERIC.getText():null)); ((ExpressionContext)_localctx).t =  Type.NUMBER; 
				}
				break;
			case 5:
				{
				setState(83);
				((ExpressionContext)_localctx).STRING = match(STRING);
				 ((ExpressionContext)_localctx).expressionValue =  new StringLiteral((((ExpressionContext)_localctx).STRING!=null?((ExpressionContext)_localctx).STRING.getText():null)); ((ExpressionContext)_localctx).t =  Type.STRING; 
				}
				break;
			case 6:
				{
				setState(85);
				((ExpressionContext)_localctx).BOOLEAN = match(BOOLEAN);
				 ((ExpressionContext)_localctx).expressionValue =  new BooleanLiteral((((ExpressionContext)_localctx).BOOLEAN!=null?((ExpressionContext)_localctx).BOOLEAN.getText():null)); ((ExpressionContext)_localctx).t =  Type.BOOLEAN; 
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(141);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(139);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(89);
						if (!(precpred(_ctx, 15))) throw new FailedPredicateException(this, "precpred(_ctx, 15)");
						setState(90);
						match(ADD);
						setState(91);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(16);
						((ExpressionContext)_localctx).expressionValue =  new Arithmetic(Operator.ADD, ((ExpressionContext)_localctx).e1.expressionValue, ((ExpressionContext)_localctx).e2.expressionValue); ((ExpressionContext)_localctx).t =  Type.NUMBER;
						}
						break;
					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(94);
						if (!(precpred(_ctx, 14))) throw new FailedPredicateException(this, "precpred(_ctx, 14)");
						setState(95);
						match(SUB);
						setState(96);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(15);
						((ExpressionContext)_localctx).expressionValue =  new Arithmetic(Operator.SUB, ((ExpressionContext)_localctx).e1.expressionValue, ((ExpressionContext)_localctx).e2.expressionValue); ((ExpressionContext)_localctx).t =  Type.NUMBER;
						}
						break;
					case 3:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(99);
						if (!(precpred(_ctx, 13))) throw new FailedPredicateException(this, "precpred(_ctx, 13)");
						setState(100);
						match(MUL);
						setState(101);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(14);
						((ExpressionContext)_localctx).expressionValue =  new Arithmetic(Operator.MUL, ((ExpressionContext)_localctx).e1.expressionValue, ((ExpressionContext)_localctx).e2.expressionValue); ((ExpressionContext)_localctx).t =  Type.NUMBER;
						}
						break;
					case 4:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(104);
						if (!(precpred(_ctx, 12))) throw new FailedPredicateException(this, "precpred(_ctx, 12)");
						setState(105);
						match(DIV);
						setState(106);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(13);
						((ExpressionContext)_localctx).expressionValue =  new Arithmetic(Operator.DIV, ((ExpressionContext)_localctx).e1.expressionValue, ((ExpressionContext)_localctx).e2.expressionValue); ((ExpressionContext)_localctx).t =  Type.NUMBER;
						}
						break;
					case 5:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(109);
						if (!(precpred(_ctx, 11))) throw new FailedPredicateException(this, "precpred(_ctx, 11)");
						setState(110);
						match(LT);
						setState(111);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(12);

						                  if (((ExpressionContext)_localctx).e1.t != Type.NUMBER || ((ExpressionContext)_localctx).e2.t != Type.NUMBER) {
						                      throw new IllegalArgumentException("Type mismatch: both operands of a '<' operation must be numeric");
						                  }
						                  ((ExpressionContext)_localctx).expressionValue =  new Cmp(CmpOperators.LT, ((ExpressionContext)_localctx).e1.expressionValue, ((ExpressionContext)_localctx).e2.expressionValue);
						                  ((ExpressionContext)_localctx).t =  Type.BOOLEAN;
						              
						}
						break;
					case 6:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(114);
						if (!(precpred(_ctx, 10))) throw new FailedPredicateException(this, "precpred(_ctx, 10)");
						setState(115);
						match(GT);
						setState(116);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(11);

						                  if (((ExpressionContext)_localctx).e1.t != Type.NUMBER || ((ExpressionContext)_localctx).e2.t != Type.NUMBER) {
						                      throw new IllegalArgumentException("Type mismatch: both operands of a '>' operation must be numeric");
						                  }
						                  ((ExpressionContext)_localctx).expressionValue =  new Cmp(CmpOperators.GT, ((ExpressionContext)_localctx).e1.expressionValue, ((ExpressionContext)_localctx).e2.expressionValue);
						                  ((ExpressionContext)_localctx).t =  Type.BOOLEAN;
						              
						}
						break;
					case 7:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(119);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(120);
						match(EQ);
						setState(121);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(10);

						                  if (((ExpressionContext)_localctx).e1.t != ((ExpressionContext)_localctx).e2.t) {
						                      throw new IllegalArgumentException("Type mismatch: operands of an 'EQ' operation must be of the same type");
						                  }
						                  ((ExpressionContext)_localctx).expressionValue =  new Cmp(CmpOperators.EQ, ((ExpressionContext)_localctx).e1.expressionValue, ((ExpressionContext)_localctx).e2.expressionValue);
						                  ((ExpressionContext)_localctx).t =  Type.BOOLEAN;
						              
						}
						break;
					case 8:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(124);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(125);
						match(LTEQ);
						setState(126);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(9);

						                  if (((ExpressionContext)_localctx).e1.t != Type.NUMBER || ((ExpressionContext)_localctx).e2.t != Type.NUMBER) {
						                      throw new IllegalArgumentException("Type mismatch: both operands of a '<' operation must be numeric");
						                  }
						                  ((ExpressionContext)_localctx).expressionValue =  new Cmp(CmpOperators.LT, ((ExpressionContext)_localctx).e1.expressionValue, ((ExpressionContext)_localctx).e2.expressionValue);
						                  ((ExpressionContext)_localctx).t =  Type.BOOLEAN;
						              
						}
						break;
					case 9:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						_localctx.e1 = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(129);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(130);
						match(GTEQ);
						setState(131);
						((ExpressionContext)_localctx).e2 = ((ExpressionContext)_localctx).expression = expression(8);
